[package]
name = "advent-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
log = "0.4.20"
itertools = "0.12.0"
struct_iterable = "0.1.1"
matches = { version = "0.1.10", features = [] }
grid = "0.12.0"
